[package]
name = "procon"
version = "0.1.0"
edition = "2021"

# dependencies added to new project
[dependencies]
proconio = "*"
# competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
permutohedron = "*"
superslice = "*"
itertools = "*"

[profile.release]
lto = true
panic = 'abort'
